src/test/deca/codegen/valid/created/objet/asm_method.deca
class A {
     void m()
        asm("
        WSTR \"hello\"  
        WNL
        WSTR \"passed\"     

        ");
}

{
    A a = new A();
    a.m();
}