src/test/deca/codegen/invalid/created/objet/voidReturn.deca
// error : The return type and method type are not compatible

class A {
    void m(int a) {
        return a;
    }


}

{
    A a = new A();
    println(a.m(5));
}